--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start --localhost",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@config-plugins/react-native-ble-plx": "^7.0.0",
     "@expo/metro-runtime": "~3.1.3",
     "@react-native-vector-icons/material-icons": "^0.0.1-alpha.9",
     "@react-navigation/bottom-tabs": "^6.5.11",
