--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start --localhost",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
     "react-native-ble-manager": "^11.5.3",
+    "react-native-ble-plx": "^3.1.2",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-multiple-select": "^0.5.12",
