--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
+    "@react-native-community/datetimepicker": "7.6.1",
     "@react-native-vector-icons/material-icons": "^0.0.1-alpha.9",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.6.6",
@@ -22,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
     "react-native-ble-plx": "^3.1.2",
+    "react-native-calendars": "^1.1305.0",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-multiple-select": "^0.5.12",
